[metadata]
name = iobm
version = 0.0.1
author = Mohammed Junaid
author_email = junaid1607@outlook.com
description = A simple conditional adverserial neural network module.
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    GitHub = https://github.com/MJ-GITHUB-007/cGAN
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
scripts = cgan.py
python_requires = >=3.6
install_requires =
    Pillow
    pretty-errors
    torch
    torchvision>
    tqdm>